2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py: Reorder calls to make work with ArgHandler.

2006-05-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: pychecker fixes
	* src/GrampsWidgets.py: pychecker fixes
	* src/glade/gramps.glade: fix text entry -> label
	* src/NameDisplay.py: pychecker fixes
	* src/DisplayState.py: pychecker fixes
	* src/GrampsDisplay.py: pychecker fixes
	* src/DateEdit.py: pychecker fixes
	* src/gramps_main.py: pychecker fixes
	* src/DbLoader.py: pychecker fixes

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: Adapt to recent changes.
	* src/BasicUtils.py (update_empty): Clean up callback.
	* src/GrampsDb/_ReadGedcom.py: Clean up callback.
	* src/GrampsDb/_GrampsDbBase.py (DbState.change_database_noclose):
	Add new method.
	* src/Makefile.am (gdir_PYTHON): Ship new file.
	* src/DbLoader.py: add new module.
	* src/ViewManager.py: Use DbLoader.
	* src/DisplayState.py (load): Do not perform post_load tasks.
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): close if
	version is incopmatible.

2006-05-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: remove place name storage
	* src/Editors/_EditLdsOrd.py: new SelectPlace interface
	* src/glade/gramps.glade: new select place interface changes
	* src/Editors/_EditPlace.py: new SelectPlace interface
	* src/Editors/_EditEventRef.py: new SelectPlace interface, remove
	old code
	* src/Editors/_EditEvent.py: new SelectPlace interface
	* src/GrampsWidgets.py: new Place editor interface

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsWidgets.py (LinkLabel.__init__): Set cursor to HAND1.

2006-05-17  Stefan Bjork  <betula@users.sourceforge.net>
	* po/sv.po: Imported from CVS and merged with gramps.pot.

2006-05-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/glade/gramps.glade, 
	* src/TipOfDay.py: Use a gtk.Window instead of a Dialog to work